fix: disable overflow on html, so that it doesn't show weird vertical scroll bar whenever scrolling news list

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@ body {
   background-color: black;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   color: #ffffff;
   background-color: black !important;
